examples/valid/01_top_level_forward_function_value.lane
module Examples.Valid01

import Basic.Ops.*

import Basic.Io.{Io, Write}

pub fn read_stored_value() -> Int {
  stored_value
}

pub let stored_value : Int = 42

pub fn answer() -> Unit ! Io {
  if read_stored_value() == 42 {
    Write::println!("42")
  } else {
    Write::println!("bad:42")
  }
}
