examples/invalid/32_effect_alias_type_kind_in_effect_position.lane
module Examples.Invalid.EffectAliasTypeKindInEffectPosition

type Answer = Int

fn bad() -> Unit ! Answer {
  ()
}
